--- a/app/components/statistics/table.component.css
+++ b/app/components/statistics/table.component.css
@@ -9,3 +9,11 @@
     /*font-size: 11px;*/
     /*font-weight: 400;*/
   }
+
+  .offLimit{
+    color: #FF7E99 !important;
+  }
+
+  .underLimit{
+    color: #6cd86a !important;
+  }
