statis slider pracuje jen s lokalnimi daty

--- a/app/components/statistics/statis.component.html
+++ b/app/components/statistics/statis.component.html
@@ -1,7 +1,7 @@
 <div id="statis">
     <table-statis [statisType]="statisType2"></table-statis>
     <chart [statisType]="statisType2"></chart>   
-    <slider-statis></slider-statis> 
+    <slider-statis  [statisType]="statisType2"></slider-statis> 
     <!--<div class="slider3" >
         <input id="{{statisId}}" style="display: none; width: 510px;"/>
     </div>-->
