--- a/app/components/about.app.component.css
+++ b/app/components/about.app.component.css
@@ -4,19 +4,25 @@
   margin-top: 5px;
   min-width: 450;
   min-height: 250;
-}
-
-#about-app-button-down {
-  position: relative;
-  background-color: transparent;
-  width: 38px;
-  height: 38px;
-  margin-right: 20px;
-  padding-top: 10px;
+  background-color: white;
 }
 
 #logoOkSystem {
   position: relative;
   margin-left: 152px;
   top: -24px;
+}
+
+.aboutAppButton {
+  width: 38px;
+  height: 38px;
+  background-color: white;
+  border-color: transparent;
+  margin-right: 10px;
+  padding-left: 3px;
+  padding-top: 3px;
+}
+
+#aboutAppId {
+  margin-top: 22px;
 }
