--- a/app/components/statistics/statistics.component.css
+++ b/app/components/statistics/statistics.component.css
@@ -19,12 +19,11 @@
 }
 
 /*STANDARD*/
-.statButton {
-  background-color: white;
+.statStandard {
+  /*background-color: white;*/
+  margin-top: 22px;
   margin-right: 10px;
-  margin-top: -58.2px;
   height: 38px;
-  width: 190px;
 
   border-radius: 4px 4px 4px 4px;
   -moz-border-radius: 4px 4px 4px 4px;
@@ -35,29 +34,34 @@
   box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
 }
 
-.statListIco {
+/*.statListIco {
   margin-left: 5px;
   margin-top: 3px;
   position: relative;
-}
+}*/
 
 .description {
-  position: relative;
+  /*position: relative;*/
 
-  background-color: white;
+  /*background-color: white;
   font-family: Roboto,Arial,sans-serif;
   font-size: 14px;
-  text-align: center;
+  text-align: center;*/
 
-  margin-left: 44px;
+  /*margin-left: 44px;
   margin-right: 5px;
   margin-top: 5px;
-  top: -27px;
+  top: -27px;*/
+  z-index: 5;
 }
 
 #hiddenButton {
-  margin-left: 105px;
-  margin-top: 4px;
+  /*margin-left: 105px;
+  margin-top: 4px;*/
+  background-color: white;
+  border-color: white;
+  height: 100%;
+  width: 100%;
 }
 
 /*MOBILE*/
