zobrazeni mock dat

--- a/app/components/test/test.tabs.char.component.html
+++ b/app/components/test/test.tabs.char.component.html
@@ -1,18 +1,18 @@
-<!--<tabset [justified]="false">
+<tabset [justified]="false">
 	<tab heading="Hodinový">
 		<canvas id="myChart1" width="400" height="400"></canvas>
 	</tab>
 	<tab heading="Denní 6-22">
 		<canvas id="myChart2" width="400" height="400"></canvas>
 	</tab>
-</tabset>-->
+</tabset>
 
 <!--
 <p *showItStandard="['iphone','ipad']">I'll show you if I'm a iPhone or ipad device.</p>
 <p *isIphone>I'll show you if I'm a iPhone device.</p>
 <p *isChrome>I'll show you if I'm a chrome browser.</p>-->
 
-<p *isSmartTv>I'll show you if I'm a smartTv device.</p>
+<!--<p *isSmartTv>I'll show you if I'm a smartTv device.</p>
 <p *isDesktop>I'll show you if I'm a desktop device.</p>
 <p *isTablet>I'll show you if I'm a tablet device.</p>
 <p *isMobile>I'll show you if I'm a mobile device.</p>
@@ -44,7 +44,7 @@
 <p *is4k>I'll show you if I'm a 4k screen.</p>
 
   <p *isPortrait>I'll show you if I'm a portrait state.</p>
-       <p *isLandscape>I'll show you if I'm a landscape state.</p>
+       <p *isLandscape>I'll show you if I'm a landscape state.</p>-->
 
 <!--<userAgentInfo (info)="thisUserAgent($event)"></userAgentInfo>-->
 <!--<test></test>-->
