about app - predelano do dialogu

--- a/app/components/about.app.component.css
+++ b/app/components/about.app.component.css
@@ -1,4 +1,4 @@
-#aboutAppTextZone {
+/*#aboutAppTextZone {
   position: relative;
   margin-right: 13px;
   margin-top: 5px;
@@ -11,7 +11,7 @@
   position: relative;
   margin-left: 152px;
   top: -24px;
-}
+}*/
 
 .aboutAppButton {
   width: 38px;
