--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -1,4 +1,4 @@
-<!--<div class="container-fluid">
+<div class="container-fluid">
 	<div class="row">
 		<map></map>
 		<overlays-search></overlays-search>
@@ -10,6 +10,6 @@
 	</div>
 	
 
-</div>-->
-<test></test>
+</div>
+<!--<test></test>-->
 <!--<tabs-test></tabs-test>-->
