--- a/app/components/statistics/statistics.component.html
+++ b/app/components/statistics/statistics.component.html
@@ -14,7 +14,7 @@
           <span class="glyphicon glyphicon-menu-up" aria-hidden="true" id="statButtonArrow"></span>
     </button>
 
-    <div id="statistics" class="collapse">
+    <div id="statistics" [collapse]="isHidden">
         <tabs-statis></tabs-statis>
     </div>
 </div>
