--- a/app/components/statistics/senzor.menu.component.css
+++ b/app/components/statistics/senzor.menu.component.css
@@ -23,10 +23,6 @@
 
 .senzorDropMenu {
   z-index: 10 !important;
-  /*margin-right: 230;
-  margin-top: 20px;
-  width: 200px;
-  height: 38px;*/
   margin-right: 10px;
   margin-top: 22px;
   height: 38px;
@@ -46,7 +42,6 @@
 }
 
 .senzorDropMenu > ul > li {
-  /*width: 38px;*/
   height: 38px;
 }
 
@@ -58,8 +53,6 @@
   border-radius: 4px 4px 4px 4px;
   -moz-border-radius: 4px 4px 4px 4px;
   -webkit-border-radius: 4px 4px 4px 4px;
-  /*width: 172px;
-  height: 38px;*/
   height: 100%;
   padding-top: 7px;
   text-align: center;
@@ -70,12 +63,11 @@
 
 .senzorDropMenu > ul > li > ul {
   z-index: 10;
-  /*width: 200px;*/
+  width: 100%;
 }
 
 .senzorListIcoDown {
-  /*position: relative;*/
-  margin-left: -13px;
+  margin-left: -11px;
   margin-top: -3px;
 }
 
@@ -91,15 +83,6 @@
 #senzorListArrowUp {
   padding-left: 1px;
 }
-
-/*#senzor-button-down {
-  position: relative;
-}*/
-
-/*#senzor-button-up {
-  position: relative;
-  width: 200px;
-}*/
 
 .selectedSenzorName {
   margin-left: 1px;
