--- a/app/components/statistics/statis.component.html
+++ b/app/components/statistics/statis.component.html
@@ -1,8 +1,5 @@
 <div id="statis">
-    <table-statis [statisType]="statisType2"></table-statis>
-    <chart [statisType]="statisType2"></chart>   
-    <slider-statis  [statisType]="statisType2"></slider-statis> 
-    <!--<div class="slider3" >
-        <input id="{{statisId}}" style="display: none; width: 510px;"/>
-    </div>-->
+    <table-statis [statisType]="statisType"></table-statis>
+    <chart [statisType]="statisType"></chart>   
+    <slider-statis [statisType]="statisType"></slider-statis> 
 </div>
