--- a/app/components/map/search.component.html
+++ b/app/components/map/search.component.html
@@ -1,4 +1,4 @@
 <!--STANDARD-->
-<input id="pac-input" class="controls" type="text" placeholder="Vyhledat místo" *hideItDevice="['mobile']">
+<input id="pac-input" class="controls pac-input" type="text" placeholder="Vyhledat místo" *hideItDevice="['mobile']">
 <!--MOBILE-->
-<input id="pac-input-M" class="controls" type="text" placeholder="Vyhledat místo" *showItDevice="['mobile']">
+<input id="pac-input" class="controls pac-input-M" type="text" placeholder="Vyhledat místo" *showItDevice="['mobile']">
