--- a/app/components/statistics/chart.component.html
+++ b/app/components/statistics/chart.component.html
@@ -1,1 +1,6 @@
-<canvas id="{{chartId}}" width="570" height="200" style="padding-top: 10px; padding-right: 10px;"></canvas>
+<div id="tabs" *hideItDevice="['mobile']">
+    <canvas id="{{chartId}}" width="570" height="200" style=" margin-left: 10px; padding-top: 10px; padding-right: 10px;"></canvas>
+</div>
+<div id="tabs" *showItDevice="['mobile']">
+    <canvas id="{{chartId}}" width="330" height="200" style="padding-top: 5px; padding-right: 5px;"></canvas>
+</div>
