--- a/app/components/statistics/tabs.statis.component.html
+++ b/app/components/statistics/tabs.statis.component.html
@@ -1,52 +1,65 @@
-<div id="tabs">
-  <!--<p>Select a tab by setting active binding to true:</p>
-  <p>
-    <button type="button" class="btn btn-primary btn-sm" (click)="tabs[0].active = true">Select second tab</button>
-    <button type="button" class="btn btn-primary btn-sm" (click)="tabs[1].active = true">Select third tab</button>
-  </p>
-  <p>
-    <button type="button" class="btn btn-primary btn-sm" (click)="tabs[1].disabled = ! tabs[1].disabled">Enable / Disable third tab</button>
-  </p>
-  <hr />
-  <tabset>
-    <tab heading="Static title">Static content</tab>
-    <tab *ngFor="let tabz of tabs"
-         [heading]="tabz.title"
-         [active]="tabz.active"
-         (select)="tabz.active = true"
-         (deselect)="tabz.active = false"
-         [disabled]="tabz.disabled"
-         [removable]="tabz.removable"
-         (removed)="removeTabHandler(tabz)">
-      {{tabz?.content}}
-    </tab>
-    <tab (select)="alertMe()">
-      <template tabHeading>
-        <i class="glyphicon glyphicon-bell"></i> Alert!
-      </template>
-      I've got an HTML heading, and a select callback. Pretty cool!
-    </tab>
-  </tabset>
- 
-  <hr />
- 
-  <tabset [vertical]="true" type="pills">
-    <tab heading="Vertical 1">Vertical content 1</tab>
-    <tab heading="Vertical 2">Vertical content 2</tab>
-  </tabset>
- 
-  <hr />-->
- 
-  <!--<p><i>Bootstrap 4 doesn't have justified classes</i></p>-->
-  <!--<tabset [justified]="true">-->
-  <tabset [justified]="false">       
-    <tab heading="Hodinový" (select)="statis1.refresh($event)"><statis #statis1 [statisType]="'HOUR'" ></statis></tab>
-    <tab heading="Denní 6-22" (select)="statis2.refresh($event)"><statis #statis2 [statisType]="'DAY6_22'"></statis></tab>
-    <tab heading="Denní 18-22" (select)="statis3.refresh($event)"><statis #statis3 [statisType]="'DAY18_22'"></statis></tab>
-    <tab heading="Noční 22-6" (select)="statis4.refresh($event)"><statis #statis4 [statisType]="'NIGHT22_6'"></statis></tab>
-    <tab heading="Denní 24h" (select)="statis5.refresh($event)"><statis #statis5 [statisType]="'DAY24'"></statis></tab>
-    <tab heading="Týdenní" (select)="statis6.refresh($event)"><statis #statis6 [statisType]="'WEEK'"></statis></tab>
-    <tab heading="Měsíční" (select)="statis7.refresh($event)"><statis #statis7 [statisType]="'MONTH'"></statis></tab>
-  </tabset>
+<div id="tabs" *hideItDevice="['mobile']">
+	<tabset [justified]="false">
+		<tab heading="Hodinový" (select)="statis1.refresh($event)">
+			<statis #statis1 [statisType]="'HOUR'"></statis>
+		</tab>
+		<tab heading="Denní 6-22" (select)="statis2.refresh($event)">
+			<statis #statis2 [statisType]="'DAY6_22'"></statis>
+		</tab>
+		<tab heading="Denní 18-22" (select)="statis3.refresh($event)">
+			<statis #statis3 [statisType]="'DAY18_22'"></statis>
+		</tab>
+		<tab heading="Noční 22-6" (select)="statis4.refresh($event)">
+			<statis #statis4 [statisType]="'NIGHT22_6'"></statis>
+		</tab>
+		<tab heading="Denní 24h" (select)="statis5.refresh($event)">
+			<statis #statis5 [statisType]="'DAY24'"></statis>
+		</tab>
+		<tab heading="Týdenní" (select)="statis6.refresh($event)">
+			<statis #statis6 [statisType]="'WEEK'"></statis>
+		</tab>
+		<tab heading="Měsíční" (select)="statis7.refresh($event)">
+			<statis #statis7 [statisType]="'MONTH'"></statis>
+		</tab>
+	</tabset>
+</div>
 
+<div id="tabs" *showItDevice="['mobile']" class="accordion-statis">
+	<accordion [closeOthers]="true" >
+		<accordion-group heading="Hodinový" [isOpen]="false" (click)="statis1.refresh($event)">
+			<div class="accordion-statis-panel" style=" overflow: scroll;">
+				<statis #statis1 [statisType]="'HOUR'"></statis>
+			</div>
+		</accordion-group>
+		<accordion-group heading="Denní 6-22" (click)="statis2.refresh($event)">
+			<div class="accordion-statis-panel">
+				<statis #statis2 [statisType]="'DAY6_22'"></statis>
+			</div>
+		</accordion-group>
+		<accordion-group heading="Denní 18-22" (click)="statis3.refresh($event)">
+			<div class="accordion-statis-panel">
+				<statis #statis3 [statisType]="'DAY18_22'"></statis>
+			</div>
+		</accordion-group>
+		<accordion-group heading="Noční 22-6" (click)="statis4.refresh($event)">
+			<div class="accordion-statis-panel">
+				<statis #statis4 [statisType]="'NIGHT22_6'"></statis>
+			</div>
+		</accordion-group>
+		<accordion-group heading="Denní 24h" (click)="statis5.refresh($event)">
+			<div class="accordion-statis-panel">
+				<statis #statis5 [statisType]="'DAY24'"></statis>
+			</div>
+		</accordion-group>
+		<accordion-group heading="Týdenní" (click)="statis6.refresh($event)">
+			<div class="accordion-statis-panel">
+				<statis #statis6 [statisType]="'WEEK'"></statis>
+			</div>
+		</accordion-group>
+		<accordion-group heading="Měsíční" (click)="statis7.refresh($event)">
+			<div class="accordion-statis-panel">
+				<statis #statis7 [statisType]="'MONTH'"></statis>
+			</div>
+		</accordion-group>
+	</accordion>
 </div>
