--- a/app/components/statistics/chart.component.css
+++ b/app/components/statistics/chart.component.css
@@ -1,4 +1,4 @@
-canvas[id*="chartId"] {
+/*canvas[id*="chartId"] {
     margin-left: 10px;
-    /*margin-top: 10px;*/
-}
+    margin-top: 10px;
+}*/
