--- a/app/components/statistics/statistics.component.css
+++ b/app/components/statistics/statistics.component.css
@@ -1,4 +1,4 @@
-#statisticsId {
+.statisticsDesktop {
   font-family: Roboto,Arial,sans-serif; 
   background-color: white;
   width:  590px;
@@ -52,31 +52,13 @@
 }
 
 /*MOBILE*/
-
-.statMobile {
-  z-index: 15 !important;
+.statisticsMobile{
+  width: 100%;
+  height: 100%;
 }
 
-#stat-button-down {
-  background-color: white;
-  border-color: white;
-  width: 38;
-  height: 38;
-  margin-top: -25px;
-  margin-right: 0px;
-}
-
-.statListIco-M {
-  margin-left: -9px;
-  margin-top: -3px;
-}
-
-#stat-button-up {
-  background-color: white;
-  border-color: white;
-  width: 38;
-  height: 38;
-  margin-top: -25px;
-  margin-left: 152px;
+.statBootstrMobile{
+    margin-top: 19px;
+    margin-right: 7px;
 }
 
