--- a/app/components/about.app.component.css
+++ b/app/components/about.app.component.css
@@ -1,21 +1,7 @@
-/*#aboutAppTextZone {
-  position: relative;
-  margin-right: 13px;
-  margin-top: 5px;
-  min-width: 450;
-  min-height: 250;
-  background-color: white;
-}
-
-#logoOkSystem {
-  position: relative;
-  margin-left: 152px;
-  top: -24px;
-}*/
-
+/*STANDARD*/
 .aboutAppButton {
-  width: 38px;
-  height: 38px;
+  width: 100%;
+  height: 100%;
   background-color: white;
   border-color: transparent;
   margin-right: 10px;
@@ -23,6 +9,27 @@
   padding-top: 3px;
 }
 
-#aboutAppId {
+.aboutApp {
   margin-top: 22px;
+  width: 38px;
+  height: 38px;
+  margin-right: 10px;
+}
+
+/*MOBILE*/
+.aboutAppMobile {
+  z-index: 16 !important;
+  margin-top: 14px;
+  width: 38px;
+  height: 38px;
+}
+
+.aboutAppButtonM {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  border-color: transparent;
+  margin-right: 10px;
+  padding-left: 3px;
+  padding-top: 2px;
 }
