--- a/app/components/map/base.map.legend.component.css
+++ b/app/components/map/base.map.legend.component.css
@@ -1,5 +1,7 @@
 #baseMapLegendId {
   z-index: 13 !important;
+  width: 38px;
+  height: 38px;
 }
 
 .legendText {
@@ -19,37 +21,58 @@
   border: 0px solid #000000;
 }
 
-#baseMapLegendId > div > div {
+.legend-vertical {
   margin-left: 10px;
+  margin-top: -188px;
+  width: 100%;
+  height: 100%;
+}
+
+.legend-horizontal {
+  margin-left: 10px;
+  width: 100%;
+  height: 100%;
 }
 
 /* MOBILE */
-#baseMapLegendId > div > div > ul {
-  margin-left: -18px;
-  margin-bottom: 5px;
+
+.mobile {
+  width: 38px;
+  height: 38px;
+  margin-bottom: 50px;
 }
 
-.mobile > legend-vertical  > ul > li > a {
-  top: 40px;
-  padding-left: 11px;
+.legend-vertical-M {
+  width: 100%;
+  height: 100%;
 }
 
-#LegendGroupVertical > li > div {
+.vertical-navbar-m {
+  width: 100%;
+  height: 100%;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+#legendButton-vertical-m {
+  width: 100%;
+  height: 100%;
+  padding-bottom: 0px;
+  background-color: transparent;
+}
+
+.legendText-vertical-M {
   margin-left: 10px;
   font-family: Roboto,Arial,sans-serif;
   text-align: center;
   font-size: 10;
 }
 
-.mobile > div > ul > li > div > li {
-  margin-left: 17px;
-}
-
-.mobile > div > ul > li > div > li > div {
-  font-family: Roboto,Arial,sans-serif;
-  text-align: center;
-  font-size: 10;
-  width: 31px;
+.legend-vertical-ico-m {
+  margin-left: 2px;
+  margin-top: -8px;
 }
 
 .mobile > div > ul > li > #LegendGroupHorizontal > li > span {
@@ -59,7 +82,7 @@
   width: 35px;
 }
 
-#LegendGroupVertical {
+#LegendGroupVertical-M {
   background-color: transparent;
   border-left: 0px;
   border-top: 0px;
