--- a/app/components/map/overlays.menu.component.css
+++ b/app/components/map/overlays.menu.component.css
@@ -161,6 +161,10 @@ span.layerSpanBox {
   width: 60%;
 }
 
+#dropdown-M {
+  z-index: 5;
+}
+
 #overlayGroup-M > li > a > span {
   margin-left: 5px;
 }
