--- a/app/components/map/overlays.search.component.css
+++ b/app/components/map/overlays.search.component.css
@@ -37,10 +37,10 @@
 .overlaysSearch {
   margin-left: 10px;
   background-color: white;
-  width: 232px;
+  width: 50%;
   height: 38px;
   padding: 0px;
-  margin-top: 20px;
+  margin-top: -36px;
 
   border-radius: 4px 0px 0px 4px;
   -moz-border-radius: 4px 0px 0px 4px;
@@ -67,48 +67,50 @@
 }
 
 .overlaysSearchMobile {
-  z-index: 15 !important;
   height: 36px;
   width: 100%;
 }
 
 .mobileTop {
-  position: relative;
-  height: 38px;
-  top: 8px;
+  margin-top: 8px;
+  width: 100%;
+  height: 0px;
 }
 
 .navbar-nav > li > a {
   height: 38px;
 }
 
-#SeparatorM-1 {
-  background-color: red;
+.separator-M {
   border-right: 1px lightgray;
   border-left: 0px;
   border-bottom: 0px;
   border-top: 0px;
   border-style: solid;
   width: 1px;
+  height: 30px;
   padding-top: 5px;
   padding-bottom: 5px;
-}
-
-#SeparatorM-2 { 
-  background-color: red;
-  border-right: 1px lightgray;
-  border-left: 0px;
-  border-bottom: 0px;
-  border-top: 0px;
-  border-style: solid;
-  width: 1px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
-
-.overlaysSearchMobile > div.mobileTop > span > search {
+  top: -36px;
+  left: 37px;
   position: relative;
-  width: 45%;
+}
+
+#overlaysSearchId > div.mobileTop > search {
   height: 38px;
-  top: -25px;
+  top: -34px;
+  left: 38px;
+  width: 45%;
+  position: relative;
+}
+
+#overlaysSearchId > div.logo > logo > a {
+  width: 100%;
+  height: 100%;
+}
+
+.logo {
+  height: 26px;
+  width: 100px;
+  margin-top: 44px;
 }
