--- a/app/components/map/overlays.search.component.html
+++ b/app/components/map/overlays.search.component.html
@@ -10,14 +10,14 @@
 <!--MOBILE-->
 <div id="overlaysSearchId" class="overlaysSearchMobile" *showItDevice="['mobile']">
     <div class="mobileTop">
-        <span class="upperBar">
+        <!--<span class="upperBar">-->
             <overlays-menu></overlays-menu>   
             <span class="separator-M"></span>
             <search></search>
-            <span class="separator-M"></span>
-        </span>
+            <!--<span class="separator-M"></span>-->
+        <!--</span>-->
     </div>
     <div class="logo">
-        <logo></logo>
+        <logo class="okLogoM"></logo>
     </div>
 </div>
