--- a/app/components/statistics/senzor.menu.component.css
+++ b/app/components/statistics/senzor.menu.component.css
@@ -91,16 +91,26 @@
 /*MOBILE*/
 .senzorDropMenu-M {
   height: 38px;
+  width: 38px;
   background-color: white;
   z-index: 15 !important;
-  top: -24px !important;
+  margin-top: 14px;
   position: relative;
+}
+
+#navBar-M {
+  width: 100%;
+  height: 100%;
+  margin-top: -30px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
 }
 
 #menu-button-M {
   position: relative;
-  width: 38px;
-  height: 38px; 
+  width: 100%;
+  height: 100%; 
   margin-right: 56px;
   margin-top: 30px;
 }
@@ -114,7 +124,7 @@
   z-index: 20;
   margin-top: -5px;
   margin-left: -114px;
-  width: 193px;
+  width: 228px;
   height: 38px;
   text-align: center;
   font-size: 16px;
