--- a/app/components/statistics/statistics.component.css
+++ b/app/components/statistics/statistics.component.css
@@ -52,13 +52,28 @@
 }
 
 /*MOBILE*/
-.statisticsMobile{
+
+.statMobile {
+  z-index: 15 !important;
+  margin-top: 14px;
+  width: 38px;
+  height: 38px;
+}
+
+.statisButtonM {
+  width: 100%;
+  height: 100%;
+  border-color: transparent;
+}
+
+.statisticsMobile {
+  z-index: 15 !important;
   width: 100%;
   height: 100%;
 }
 
-.statBootstrMobile{
-    margin-top: 19px;
-    margin-right: 7px;
+.statListIcoM {
+  margin-top: -4px;
+  margin-left: -8px;
 }
 
