--- a/app/components/map/overlays.search.component.html
+++ b/app/components/map/overlays.search.component.html
@@ -1,10 +1,12 @@
 <!--STANDARD-->
 <div id="overlaysSearchId" class="overlaysSearchStandard" *hideItDevice="['mobile']">
-    <logo></logo>
     <div class="overlaysSearch">
         <overlays-menu></overlays-menu>
         <span class="separator"></span>
         <search></search>
+    </div>
+    <div class="logo">
+      <logo></logo>
     </div>
 </div>
 <!--MOBILE-->
@@ -17,7 +19,7 @@
             <!--<span class="separator-M"></span>-->
         <!--</span>-->
     </div>
-    <div class="logo">
+    <div class="logo-M">
         <logo class="okLogoM"></logo>
     </div>
 </div>
