--- a/app/components/slider.component.css
+++ b/app/components/slider.component.css
@@ -5,13 +5,22 @@
     font-weight: 400;
 }
 
-#rectangle3 {
+.rect3 {
     z-index: 12;
     position: relative;
     width:100%;
     padding-right: 123px;
     left: 76px;
     padding-bottom: 17px; 
+}
+
+.rect3-M {
+    z-index: 12;
+    position: relative;
+    width: 109%;
+    padding-right: 88px;
+    margin-left: -67px;
+    padding-bottom: 17px;
 }
 
 #rectangle2 {
