uklid a uprava hlavniho slideru

--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -1,15 +1,15 @@
-<div class="container-fluid">
-	<div class="row">
-		<map></map>
-		<overlays-search></overlays-search>
-		<slider></slider>
-		<senzor-menu></senzor-menu>
-		<statistics></statistics>
-		<base-map-legend></base-map-legend>
-		<about-app></about-app>
-	</div>
-	
+<!--<div class="container-fluid">-->
+<!--<div class="row">-->
 
+<map></map>
+<div style="display:none;">
+	<overlays-search></overlays-search>
+	<slider></slider>
+	<senzor-menu></senzor-menu>
+	<statistics></statistics>
+	<base-map-legend></base-map-legend>
+	<about-app></about-app>
 </div>
+
 <!--<test></test>-->
 <!--<tabs-test></tabs-test>-->
