--- a/app/components/map/base.map.legend.component.css
+++ b/app/components/map/base.map.legend.component.css
@@ -1,3 +1,4 @@
+/*STANDARD*/
 .standard {
   z-index: 13 !important;
   width: 38px;
@@ -35,7 +36,6 @@
 }
 
 /* MOBILE */
-
 .mobile {
   z-index: 13 !important;
   margin-left: 10px;
@@ -43,72 +43,16 @@
   text-align: center;
   font-family: Roboto,Arial,sans-serif;
   font-weight: bold;
+  width: 10%;
 }
 
-/*.legend-vertical-M {
-  width: 100%;
-  height: 100%;
-}
+.legendText-M {
+  -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
 
-.vertical-navbar-m {
-  width: 100%;
-  height: 100%;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  border-radius: 4px 4px 4px 4px;
+  -moz-border-radius: 4px 4px 4px 4px;
+  -webkit-border-radius: 4px 4px 4px 4px;
+  border: 0px solid #000000;
 }
-
-#legendButton-vertical-m {
-  width: 100%;
-  height: 100%;
-  padding-bottom: 0px;
-  background-color: transparent;
-}
-
-.legendText-vertical-M {
-  margin-left: 10px;
-  font-family: Roboto,Arial,sans-serif;
-  text-align: center;
-  font-size: 10;
-}
-
-.legend-vertical-ico-m {
-  margin-left: 2px;
-  margin-top: -8px;
-}
-
-.mobile > div > ul > li > #LegendGroupHorizontal > li > span {
-  font-family: Roboto,Arial,sans-serif;
-  text-align: center;
-  font-size: 10;
-  width: 35px;
-}
-
-#LegendGroupVertical-M {
-  background-color: transparent;
-  border-left: 0px;
-  border-top: 0px;
-  border-right: 0px;
-  border-top: 0px;
-  margin: 3px;
-  padding: 0px;
-}
-
-#legendButton {
-  margin-left: 4px;
-  padding-bottom: 0px;
-  background-color: transparent;
-}
-
-.mobile > div > ul > li > #LegendGroupHorizontal {
-  background-color: transparent;
-  border-left: 0px;
-  border-top: 0px;
-  border-right: 0px;
-  border-top: 0px;
-  margin: 3px;
-  padding: 0px;
-  width: 395px;
-  height: 7px;
-}*/
