--- a/app/components/map/overlays.menu.component.css
+++ b/app/components/map/overlays.menu.component.css
@@ -5,18 +5,21 @@
   height: 38px;
 }
 
-.overlayGroup {
+#overlayGroup {
   z-index: 15 !important;
-  position: relative;
   font-family: Roboto,Arial,sans-serif;
   font-size: 11px;
   opacity: .94;
   padding-bottom: 5px;
   width: 232px;
+
+  overflow-y: auto; 
+  max-height: 500px; 
+  overflow-x: auto;
+  max-width: 250px;
 }
 
 #imageBox {
-  /*position: relative !important;*/
   width: 38px;
   height: 38px;
 }
@@ -111,13 +114,6 @@ span.layerSpanBox {
   top: -2px;
 }
 
-.dropdown-menu {
-  overflow-y: auto; 
-  max-height: 500px; 
-  overflow-x: auto;
-  max-width: 250px;
-}
-
 .layerTextLegend {
   text-align: left;
   position: relative;
@@ -141,7 +137,7 @@ span.layerSpanBox {
 
 /*MOBILE VERSION*/
 .overlaysMenu-M {
-  height: 44px;
+  height: 38px;
   background-color: white;
 }
 
@@ -157,7 +153,7 @@ span.layerSpanBox {
 }
 
 #nav-bar-M {
-  width: 60%;
+  width: 38px;
 }
 
 #dropdown-M {
@@ -179,12 +175,16 @@ span.layerSpanBox {
   background-color: white;
   width: 210px;
   margin-top: -1px;
-  height: 480px;
+  height: 1521%;
+
+  overflow-y: auto; 
+  max-height: 1521%; 
+  overflow-x: auto;
+  max-width: 250px;
 }
 
 #nav-bar-M > li > a {
   margin-left: 0px;
-  margin-top: 6px;
 }
 
 .layerHeader-M {
