--- a/app/components/map/overlays.search.component.css
+++ b/app/components/map/overlays.search.component.css
@@ -7,14 +7,18 @@
 
 .overlaysSearchStandard {
   height: 38px;
-  z-index: 20 !important;
-  margin-top: 23px;
+  margin-top: -2px;
   margin-left: 10px;
 }
 
 .overlaysSearchStandard > div.logo > logo {
   width: 100%;
   height: 100%;
+}
+
+.logo {
+  z-index: 20 !important;
+  padding-top: 7px;
 }
 
 .overlaysSearchStandard > div > overlays-menu {
@@ -27,8 +31,8 @@
 }
 
 .overlaysSearchStandard > div > search {
+  padding-left: 40px;
   position: relative;
-  left: 40px;
   top: -38px;
 }
 
@@ -40,6 +44,7 @@
 }
 
 .overlaysSearch {
+  z-index: 5;
   background-color: white;
   height: 38px;
   padding: 0px;
@@ -74,7 +79,6 @@
 }
 
 .mobileTop {
-  margin-top: 8px;
   width: 100%;
   height: 0px;
 }
@@ -100,7 +104,7 @@
 
 #overlaysSearchId > div.mobileTop > search {
   height: 38px;
-  top: -34px;
+  top: -35px;
   left: 38px;
   width: 45%;
   position: relative;
@@ -119,5 +123,5 @@
 .logo-M {
   height: 26px;
   width: 100px;
-  margin-top: 44px;
+  margin-top: 36px;
 }
