--- a/app/components/map/overlays.menu.component.css
+++ b/app/components/map/overlays.menu.component.css
@@ -173,12 +173,12 @@ span.layerSpanBox {
   font-family: Roboto,Arial,sans-serif;
   font-size: 16px;
   background-color: white;
-  width: 210px;
+  width: 225px;
   margin-top: -1px;
-  height: 330%;
+  height: 400%;
 
   overflow-y: auto; 
-  max-height: 330%; 
+  max-height: 400%; 
   overflow-x: auto;
   max-width: 250px;
 }
@@ -197,9 +197,9 @@ span.layerSpanBox {
 }
 
 .groupItem-M {
-  line-height: 14px;
-  margin-left: -19px;
   width: 100%;
+  margin-left: 5px;
+  padding: 0px !important;
 }
 
 .layerTextLegend-M {
