--- a/app/components/map/base.map.legend.component.css
+++ b/app/components/map/base.map.legend.component.css
@@ -43,7 +43,7 @@
   text-align: center;
   font-family: Roboto,Arial,sans-serif;
   font-weight: bold;
-  width: 10%;
+  width: 40px;
 }
 
 .legendText-M {
