--- a/app/components/map/logo.component.css
+++ b/app/components/map/logo.component.css
@@ -1,5 +1,10 @@
+.okhome {
+  z-index: 20 !important; 
+  position: relative;
+  top: 4px;
+}
+
 .logoImage {
-  z-index: 20 !important;
   height: 22px;
 
   border-radius: 6px 6px 0px 0px;
