--- a/app/components/map/base.map.legend.component.css
+++ b/app/components/map/base.map.legend.component.css
@@ -24,7 +24,14 @@
 
 .legend-vertical {
   margin-left: 11px;
-  margin-top: -188px;
+  margin-top: -188px; 
+  width: 100%;
+  height: 100%;
+}
+
+.legend-vertical-ie {
+  margin-left: 11px;
+  margin-top: -197px; 
   width: 100%;
   height: 100%;
 }
