--- a/app/components/map/base.map.legend.component.html
+++ b/app/components/map/base.map.legend.component.html
@@ -8,10 +8,20 @@
         </span>
     </div>
     <!--Vertical-->
-    <div *ngIf="showVertical" class="legend-vertical">
-        <div class="legendText" *ngFor="let legend of legends" [style.background]="legend.color" [style.color]="legend.colorText"
+    <span *hideItBrowser="['ie']">
+      <!-- Chrome, Firefox, Safari, Opera --> 
+      <div *ngIf="showVertical" class="legend-vertical">
+          <div class="legendText" *ngFor="let legend of legends" [style.background]="legend.color" [style.color]="legend.colorText"
             tooltip="Hluk naměřený v DB" tooltipPopupDelay="1500" tooltipPlacement="right" tooltipClass="tooltip-legend">{{legend.valueText}}</div>
-    </div>
+      </div>
+    </span>
+    <!-- Internet Explorer -->
+    <span *showItBrowser="['ie']">
+          <div *ngIf="showVertical" class="legend-vertical-ie">
+            <div class="legendText" *ngFor="let legend of legends" [style.background]="legend.color" [style.color]="legend.colorText"
+              tooltip="Hluk naměřený v DB" tooltipPopupDelay="1500" tooltipPlacement="right" tooltipClass="tooltip-legend">{{legend.valueText}}</div>
+          </div>
+    </span>
 </div>
 
 
