--- a/app/components/statistics/senzor.menu.component.css
+++ b/app/components/statistics/senzor.menu.component.css
@@ -68,12 +68,16 @@
 
 .senzorListIcoDown {
   margin-left: -11px;
-  margin-top: -3px;
+  margin-top: -7px;
+  width: 38px;
+  height: 38px;
 }
 
 .senzorListIcoUp {
   margin-left: -14px;
-  margin-top: -3px;
+  margin-top: -7px;
+  width: 38px;
+  height: 38px;
 }
 
 #senzorListArrowDown {
@@ -114,8 +118,10 @@
 }
 
 .senzorListIco-M {
-  margin-top: -6.5px;
-  margin-left: -12px;
+  margin-top: -9.5px;
+  margin-left: -14px;
+  width: 38px;
+  height: 38px;
 }
 
 #navBar-M > li > ul {
