--- a/app/components/statistics/statistics.component.css
+++ b/app/components/statistics/statistics.component.css
@@ -26,10 +26,6 @@
   border-radius: 4px 4px 4px 4px;
   -moz-border-radius: 4px 4px 4px 4px;
   -webkit-border-radius: 4px 4px 4px 4px;
-
-  -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-  -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-  box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
 }
 
 .statListIco {
@@ -45,14 +41,26 @@
   color: #337ab7;
 }
 
-#hiddenButton {
+.hiddenButton {
   background-color: white;
-  border-color: white;
   height: 100%;
+
+  -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+}
+
+.visibleButton {
+  background-color: whitesmoke;
+  border: 1px solid #337ab7;
+  height: 100%;
+
+  -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.3);
+  box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.3);
 }
 
 /*MOBILE*/
-
 .statMobile {
   z-index: 15 !important;
   width: 38px;
