--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -8,8 +8,9 @@
 	<senzor-menu></senzor-menu>
 	<statistics></statistics>
 	<base-map-legend></base-map-legend>
-	<about-app></about-app>
+	<!--<about-app></about-app>-->
 </div>
 
+<about-app></about-app>
 <!--<test></test>-->
 <!--<tabs-test></tabs-test>-->
