--- a/app/components/statistics/chart.component.css
+++ b/app/components/statistics/chart.component.css
@@ -2,3 +2,17 @@
     margin-left: 10px;
     margin-top: 10px;
 }*/
+
+/*.chartDesktop{
+    width: 100%;
+    /*height: 400px;*/
+    /*background-color: red;*/
+/*}*/
+
+/*.chartMobile{*/
+    /*width: 100%;*/
+    /*height: 300px;*/
+    /*background-color: green;*/
+/*}*/
+
+
