--- a/app/components/about.app.component.css
+++ b/app/components/about.app.component.css
@@ -1,23 +1,15 @@
 /*STANDARD*/
-.aboutAppButton {
-  width: 100%;
-  height: 100%;
-  background-color: white;
-  border-color: transparent;
-  margin-right: 10px;
-  padding-left: 3px;
-  padding-top: 3px;
-}
-
 .aboutApp {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+
   margin-top: 10px;
-  width: 38px;
-  height: 38px;
   margin-right: 10px;
 }
 
 /*MOBILE*/
-.aboutAppMobile {
+/*.aboutAppMobile {
   z-index: 16 !important;
   width: 38px;
   height: 38px;
@@ -31,4 +23,4 @@
   margin-right: 10px;
   padding-left: 3px;
   padding-top: 2px;
-}
+}*/
