--- a/app/components/statistics/senzor.menu.component.css
+++ b/app/components/statistics/senzor.menu.component.css
@@ -22,6 +22,10 @@
 }
 
 .senzorDropMenu {
+  position: absolute;
+  right: 239px;
+  top: 0px;
+
   z-index: 10 !important;
   margin-right: 10px;
   margin-top: 10px;
