--- a/app/components/statistics/statistics.component.css
+++ b/app/components/statistics/statistics.component.css
@@ -5,7 +5,7 @@
   height: 430px !important;
 
   margin-right: 10px;
-  margin-top: 10px;
+  margin-top: 66px;
 
   border-radius: 4px 4px 4px 4px;
   -moz-border-radius: 4px 4px 4px 4px;
@@ -18,6 +18,10 @@
 
 /*STANDARD*/
 .statStandard {
+  position: absolute;
+  right: 68px;
+  top: 0px;
+
   margin-top: 10px;
   margin-right: 10px;
   height: 38px;
