--- a/app/components/statistics/statistics.component.css
+++ b/app/components/statistics/statistics.component.css
@@ -1,4 +1,4 @@
-.statisticsDesktop {
+/*.statisticsDesktop {
   font-family: Roboto,Arial,sans-serif; 
   background-color: white;
   width:  590px;
@@ -14,24 +14,24 @@
   -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-}
+}*/
 
 /*STANDARD*/
 .statStandard {
   position: absolute;
-  right: 68px;
-  top: 0px;
+  right: 78px;
+  top: 10px;
 
-  margin-top: 10px;
+  /*margin-top: 10px;
   margin-right: 10px;
   height: 38px;
-  z-index: 15 !important;
+  z-index: 15 !important;*/
 
-  border-radius: 4px 4px 4px 4px;
+  /*border-radius: 4px 4px 4px 4px;
   -moz-border-radius: 4px 4px 4px 4px;
-  -webkit-border-radius: 4px 4px 4px 4px;
+  -webkit-border-radius: 4px 4px 4px 4px;*/
 }
-
+/*
 .statListIco {
   margin-left: -8px;
   margin-top: -3px;
@@ -62,15 +62,15 @@
   -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.3);
   -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.3);
   box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.3);
-}
+}*/
 
 /*MOBILE*/
 .statMobile {
-  z-index: 15 !important;
-  width: 38px;
-  height: 38px;
+  position: absolute;
+  right: 78px;
+  top: 10px;
 }
-
+/*
 .statisButtonM {
   width: 100%;
   height: 100%;
@@ -86,5 +86,5 @@
 .statListIcoM {
   margin-top: -4px;
   margin-left: -8px;
-}
+}*/
 
