test predelani komponenty vrstev

--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -10,5 +10,6 @@
 	<about-app></about-app>
 	<senzor-menu></senzor-menu>
 	<statistics></statistics>
+	<overlays-menu></overlays-menu>
 <!--<test></test>-->
 <!--<tabs-test></tabs-test>-->
