--- a/app/components/map/overlays.menu.component.css
+++ b/app/components/map/overlays.menu.component.css
@@ -1,211 +1,12 @@
 /*STANDARD VERSION*/
-.overlaysMenu {
-  position: relative;
-  width: 38px;
-  height: 38px;
+#overlaysMenuId {
+  position: absolute;
+  right: 418px;
+  top: 10px;
 }
-
-#overlayGroup {
-  z-index: 25 !important;
-  font-family: Roboto,Arial,sans-serif;
-  font-size: 11px;
-  opacity: .94;
-  padding-bottom: 5px;
-  width: 232px;
-
-  overflow-y: auto; 
-  max-height: 500px; 
-  overflow-x: auto;
-  max-width: 250px;
-}
-
-#imageBox {
-  width: 38px;
-  height: 38px;
-}
-
-.layerMenuIco {
-  margin-top: -12px;
-  margin-left: -12px;
-}
-
-#layerNavBar {
-  position: fixed !important;
-  z-index: 15 !important;
-  width: 38px;
-  height: 38px;
-}
-
-.navbar-nav {
-  padding: 0px !important;
-  margin: 0px !important;
-}
-
-#layerDropDown {
-  position: relative !important;
-  width: 38px;
-  height: 38px;
-}
-
-.position { 
-  float: left;
-  width: 20px;
-}
-
-.positionIE { 
-  float: left;
-  width: 20px;
-}
-
-.layerChBox {
-  display: inline;
-}
-
-.layerChBoxIE {
-  margin-top: 2px !important;
-}
-
-span.layerHeader {
-  font-weight: 600;
-  font-size: larger;
-  margin-left: 7px;
-}
-
-span.position {
-  text-align: center;
-  position: relative;
-  margin-top: 1.5px;
-  height: 12.5px;
-}
-
-span.positionIE {
-  text-align: center;
-  position: relative;
-  height: 12.5px;
-  margin-top: 1.2px; 
-}
-
-span.layerText {
-  margin-left: 5px;
-  text-align: center;
-  position: relative;
-  top: -4px;
-}
-
-span.layerTextIE {
-  margin-left: 5px;
-  text-align: center;
-  position: relative;
-  top: -3px;
-}
-
-span.layerSpanBox {
-  position: relative;
-  top: -1px;
-}
-
-.groupItem {
-  height: 20px;
-  margin-left: -15px;
-}
-
-.groupItemSpan {
-  position: relative;
-  top: -2px;
-}
-
-.layerTextLegend {
-  text-align: left;
-  position: relative;
-  font-family: Roboto,Arial,sans-serif;
-  font-size: 10px;
-  color: silver;
-}
-
-.layerLegend {
-  border-right: 0px;
-  border-left: 0px;
-  border-bottom: 0px;
-  border-top: 1px lightgray;
-  border-style: solid;
-  width: 100%;
-  position: relative;
-  padding-left: 7px;
-  padding-top: 4px;
-}
-
 
 /*MOBILE VERSION*/
 .overlaysMenu-M {
   height: 38px;
   background-color: white;
-}
-
-.overlaysMenu-M > ul > li > a {
-  height: 38px;
-  width: 38px;
-  padding: 0px;
-}
-
-.layerMenuIco-M {
-  margin-left: 2px;
-  margin-top: 3px;
-}
-
-#nav-bar-M {
-  width: 38px;
-}
-
-#dropdown-M {
-  z-index: 5;
-}
-
-#overlayGroup-M > li > a > span {
-  margin-left: 5px;
-}
-
-.position-M {
-  position: relative;
-  top: -2px;
-}
-
-#overlayGroup-M {
-  font-family: Roboto,Arial,sans-serif;
-  font-size: 16px;
-  background-color: white;
-  width: 225px;
-  margin-top: -1px;
-  height: 400%;
-
-  overflow-y: auto; 
-  max-height: 400%; 
-  overflow-x: auto;
-  max-width: 250px;
-}
-
-#nav-bar-M > li > a {
-  margin-left: 0px;
-}
-
-.layerHeader-M {
-  font-weight: 600;
-  margin-left: 10px;
-}
-
-#nav-bar-M > li {
-  height: 100px;
-}
-
-.groupItem-M {
-  width: 100%;
-  margin-left: 5px;
-  padding: 0px !important;
-}
-
-.layerTextLegend-M {
-  text-align: left;
-  position: relative;
-  font-family: Roboto,Arial,sans-serif;
-  font-size: 10px;
-  color: silver;
 }
