--- a/app/components/about.app.component.html
+++ b/app/components/about.app.component.html
@@ -1,7 +1,9 @@
 <div id="aboutAppId" class="aboutApp" [class.aboutApp]="!isMobile()" [class.aboutAppMobile]="isMobile()">
 
 	<button   (click)="lgModal.show()" type="button" class="btn btn-default aboutAppButton" [class.aboutAppButton]="!isMobile()" [class.aboutAppButtonM]="isMobile()"> 
-        <img class="aboutAppIcoDown" src="..\app\images\question.png">
+        <!--<img class="aboutAppIcoDown" src="..\app\images\question.png">-->
+				<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
+				O webu
   </button>
 
 
