--- a/app/components/statistics/senzor.menu.component.css
+++ b/app/components/statistics/senzor.menu.component.css
@@ -1,8 +1,4 @@
 /*STANDARD*/
-.navbar {
-  margin:10px;
-}
-
 .bold-sensor {
   font-weight: bold;
 }
@@ -15,134 +11,14 @@
   color: gray;
 }
 
-#combo {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  font-size: 14px; 
-}
 
-.senzorDropMenu {
+#senzorMenuId {
   position: absolute;
-  right: 239px;
-  top: 0px;
+  right: 272px;
+  top: 10px;
 
-  z-index: 10 !important;
-  margin-right: 10px;
+  /*z-index: 10 !important;
+  margin-right: 10px auto;
   margin-top: 10px;
-  height: 38px;
+  height: 38px;*/
 }
-
-.senzorDropMenu > ul {
-  border-radius: 4px 4px 4px 4px;
-  -moz-border-radius: 4px 4px 4px 4px;
-  -webkit-border-radius: 4px 4px 4px 4px;
-
-  -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-  -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-  box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-  background-color: white;
-  height: 100%;
-  width: 100%;
-}
-
-.senzorDropMenu > ul > li {
-  height: 38px;
-}
-
-.description {
-  margin-left: 10px
-}
-
-.senzorDropMenu > ul > li > a {
-  border-radius: 4px 4px 4px 4px;
-  -moz-border-radius: 4px 4px 4px 4px;
-  -webkit-border-radius: 4px 4px 4px 4px;
-  height: 100%;
-  padding-top: 7px;
-  text-align: center;
-  font-size: 14px;
-  background-color: white;
-  font-family: Roboto,Arial,sans-serif;
-}
-
-.senzorDropMenu > ul > li > ul {
-  z-index: 10;
-  width: 100%;
-}
-
-.senzorListIcoDown {
-  margin-left: -11px;
-  margin-top: -7px;
-  width: 38px;
-  height: 38px;
-}
-
-.senzorListIcoUp {
-  margin-left: -14px;
-  margin-top: -7px;
-  width: 38px;
-  height: 38px;
-}
-
-#senzorListArrowDown {
-  padding-left: 4px;
-}
-
-#senzorListArrowUp {
-  padding-left: 1px;
-}
-
-.selectedSenzorName {
-  margin-left: 1px;
-}
-
-/*MOBILE*/
-.senzorDropMenu-M {
-  height: 38px;
-  width: 38px;
-  background-color: white;
-  z-index: 15 !important;
-  position: relative;
-}
-
-#navBar-M {
-  width: 100%;
-  height: 100%;
-  margin-top: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-bottom: 0px;
-}
-
-#menu-button-M {
-  position: relative;
-  width: 100%;
-  height: 100%; 
-  margin-right: 56px;
-}
-
-.senzorListIco-M {
-  margin-top: -9.5px;
-  margin-left: -14px;
-  width: 38px;
-  height: 38px;
-}
-
-#navBar-M > li > ul {
-  z-index: 20;
-  margin-top: -5px;
-  margin-left: -114px;
-  width: 228px;
-  height: 38px;
-  text-align: center;
-  font-size: 16px;
-  font-family: Roboto,Arial,sans-serif;
-}
-
-#navBar-M > li > ul > li {
-  background-color: white;
-  margin-top: -1px;
-}
-
-
-
